<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/text_account">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_account"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="40dp"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_width="260dp"
            android:layout_marginTop="80dp"
            android:layout_height="60dp"
            android:id="@+id/btn_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            style="@style/AppButton"
            android:text="@string/text_login">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>